refactor(result): 스트림 -> 스트링 함수 사용
- 기능 변화 없음